solved z-index issue with modal

--- a/src/components/Dealmodal/Dealmodal.css
+++ b/src/components/Dealmodal/Dealmodal.css
@@ -1,11 +1,12 @@
 @import url(./../../App.css);
+
 .bottommodal
 {
     width:100%;
     height: 100%;
     background-color: var(--white-color);
     transition: all 0.2s ease-in-out;
-    transform: translateY(calc(100vh - 550px));
+    transform: translateY(calc(100vh - 450px));
     position: absolute;
     overflow-y: auto;
     z-index: 1;
@@ -20,17 +21,18 @@
   }
 .dealmodalnav{
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    height: 60px;
 }
 .deal-info-container{
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    margin-bottom: calc(100vh - 450px);
 }
 .dealname
 {
-    margin: 0 0 0 20px;
     color: var(--heading-color);
+    margin: 0 auto 0;
 }
 
 .dealinforow{
